# Gearbot-Animal-API

./: .gitignore  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  cat_fact_injest.py  default_config.toml  dog_fact_injest.py  example_keys.json  injest.py
.github/workflows/: build.yml  lint.yml  test.yml
ci/: discordnotify.yml  installrust.yml
example_facts/: cat_facts.json  dog_facts.json  fact_flags.json
src/: admin.rs  animal_facts.rs  flagging.rs  lib.rs  main.rs
tests/: admin_flag.rs  admin_general.rs  api_tests.rs  consumption.rs  generator.rs
