[package]
name = "animal_api"
version = "1.0.0"
authors = ["BlackHoleFox <blackholefoxdev@gmail.com>"]
edition = "2018"
default-run = "animal_api"

[dependencies]
actix-web = "1.0"
flexi_logger = "0.15"
log = "0.4"
prometheus = "0.7"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

[[bin]]
name = "animal_api"
path = "./src/bin/main.rs"