[package]
name = "animal_api"
version = "2.0.0"
authors = ["BlackHoleFox <blackholefoxdev@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "3.1", features = ["rustls"] }
flexi_logger = "0.16"
log = "0.4"
prometheus = "0.9"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = "2.2"
toml = "0.5"

[dev-dependencies]
actix-rt = "1.1"
tempdir = "0.3"

[[bin]]
name = "animal_api"
path = "./src/bin/main.rs"

[profile.release]
lto = true
codegen-units = 1